[gd_scene load_steps=8 format=2]

[ext_resource path="res://contents/entities/player_vessel/player_vessel.tscn" type="PackedScene" id=1]
[ext_resource path="res://contents/entities/water/water.tscn" type="PackedScene" id=2]
[ext_resource path="res://contents/systems/drifter_spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://contents/entities/world/world.gd" type="Script" id=4]
[ext_resource path="res://contents/entities/item_barrel/item_barrel.tscn" type="PackedScene" id=5]
[ext_resource path="res://contents/entities/item_wood/item_wood.tscn" type="PackedScene" id=6]
[ext_resource path="res://contents/entities/static_buyant_post/static_buoyant_post.tscn" type="PackedScene" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="OceanBackground" type="ParallaxBackground" parent="."]

[node name="Shallow" type="ParallaxLayer" parent="OceanBackground"]
__meta__ = {
"_edit_lock_": true
}

[node name="Water" parent="OceanBackground/Shallow" instance=ExtResource( 2 )]
region_enabled = true
region_rect = Rect2( 0, 0, 13440, 8640 )

[node name="Items" type="Node" parent="."]

[node name="Posts" type="Node" parent="."]

[node name="StaticBuoyantPost" parent="Posts" instance=ExtResource( 7 )]
position = Vector2( 797, 675 )
required_items_amount = 2

[node name="StaticBuoyantPost2" parent="Posts" instance=ExtResource( 7 )]
position = Vector2( 3266, -1170 )
required_items_amount = 4

[node name="StaticBuoyantPost3" parent="Posts" instance=ExtResource( 7 )]
position = Vector2( 4808, 2963 )
required_items_amount = 2

[node name="StaticBuoyantPost4" parent="Posts" instance=ExtResource( 7 )]
position = Vector2( -4374, 776 )

[node name="StaticBuoyantPost5" parent="Posts" instance=ExtResource( 7 )]
position = Vector2( -1693, -3074 )
required_items_amount = 1

[node name="PlayerVessel2D" parent="." groups=["buoyant"] instance=ExtResource( 1 )]
position = Vector2( 399, 663 )
collision_mask = 1
max_speed = 100.0

[node name="DrifterSpawner" parent="PlayerVessel2D" instance=ExtResource( 3 )]
drifting_items = [ ExtResource( 6 ), ExtResource( 5 ) ]
item_container = NodePath("../../Items")

[node name="WindHowlingSFX" type="AudioStreamPlayer" parent="."]

[node name="WindHowlTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="WindHowlTimer" to="." method="_on_WindHowlTimer_timeout"]
